# Triangles

./: CMakeLists.txt
include/: .Triangles.h.swp  Line.h  Plane.h  Point.h  Segment.h  Triangles.h  a.out  test.cpp
src/: e2e_tests.cpp  main.cpp  test_gen.cpp  unit_tests.cpp
src/Ans/: test0_ans.txt  test1_ans.txt  test2_ans.txt  test3_ans.txt  test4_ans.txt  test5_ans.txt  test6_ans.txt  test7_ans.txt  test8_ans.txt  test9_ans.txt
src/Tests/: test0.txt  test1.txt  test10.txt  test11.txt  test12.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  testA.txt  testB.txt
